--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/d3": "^7",
+    "@types/d3-sankey": "^0.12",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
-    "@types/d3": "^7",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
